2006-01-03  Eric Anholt  <anholt@FreeBSD.org>

	* render/picture.c: (premultiply):
	Correct rounding in divide-by-255 code.  Obtained from xserver.

2006-01-03  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/xglpict.c: (xglPictureInit):
	Remove the manual AddFilter for convolution, which I'm pretty sure
	shouldn't be necessary due to it already happening from
	PictureSetDefaultFilters.

2006-01-03  Eric Anholt  <anholt@FreeBSD.org>

	* render/glyph.c: (ResetGlyphPrivates),
	(AllocateGlyphPrivateIndex), (AllocateGlyphPrivate),
	(SetGlyphScreenPrivateOffsets), (SetGlyphPrivatePointers),
	(ReallocGlobalGlyphPrivate), (GlyphInit), (GlyphFinishInit),
	(GlyphUninit), (FreeGlyph), (AddGlyph), (AllocateGlyph):
	* render/glyphstr.h:
	* render/miglyph.c: (miRealizeGlyph), (miUnrealizeGlyph):
	* render/mipict.c: (miPictureInit):
	* render/mipict.h:
	* render/picture.c: (PictureCloseScreen), (PictureFinishInit):
	* render/picturestr.h:
	Add glyph privates for Xgl, which uses them to implement a glyph cache.
	EXA would probably also like to do this.  This breaks module ABI for EXA
	and XAA, and likely breaks proprietary drivers as well.

	Obtained from: xserver tree (David Reveman)

2005-12-31  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/glx/xglx.c: (xglxWindowExposures):
	* hw/xgl/glxext/xglglxext.c: (xglCreateBuffer):
	* hw/xgl/xglsync.c: (xglSyncBits):
	* hw/xgl/xglwindow.c: (xglCopyWindow):
	Change REGION_INIT(pScreen, &foo, NullBox, 0) to REGION_NULL(pScreen,
	&foo).  While it is no longer (or rather, once again not) required as of
	regionstr.h r1.4, it matches the style of the rest of the xorg code.

2005-12-30  Eric Anholt  <anholt@FreeBSD.org>

	* hw/xgl/xglsync.c: (xglSyncBits), (xglSyncSurface):
	Initialize the fourcc value in stack-allocated glitz_pixel_format_t
	structures.  Greatly reduces the number of uninitialized-value accesses
	during Xgl startup according to valgrind.  Allocating and filling these
	in by hand on the stack seems very shady to me.
